--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*/
+*
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -421,7 +421,7 @@ align-self:start;
     overflow-x: hidden;
     overflow-y: auto;
     height:300px;
-    background-color:##020873;  
+    background-color:#020873;  
 }
 .scrollthree section{
     display:inline grid;
